--- a/portfolio.html
+++ b/portfolio.html
@@ -49,7 +49,7 @@
       <h2>Example of works</h2>
       <ul class="example">
         <li>
-          <img src="./images/img.jpg" alt="bank app" width="360" />
+          <img src="./images/photo.jpg" alt="bank app" width="360" />
           <h3 class="example-titles">Banking App Interface Concept</h3>
           <p>App</p>
           <p>
@@ -59,7 +59,7 @@
           </p>
         </li>
         <li>
-          <img src="./images/img (1).jpg" alt="blank screen" width="360" />
+          <img src="./images/photoa.jpg" alt="blank screen" width="360" />
           <h3 class="example-titles">Cashless Payment</h3>
           <p>Marketing</p>
           <p>
@@ -70,7 +70,7 @@
         </li>
         <li>
           <img
-            src="./images/img (2).jpg"
+            src="./images/photob.jpg"
             alt="computer and smartfon"
             width="360"
           />
@@ -84,7 +84,7 @@
         </li>
         <li>
           <img
-            src="./images/img (3).jpg"
+            src="./images/photoc.jpg"
             alt="the man behind the wheel"
             width="360"
           />
@@ -98,7 +98,7 @@
         </li>
         <li>
           <img
-            src="./images/img (4).jpg"
+            src="./images/photod.jpg"
             alt="screensaver for the phone"
             width="360"
           />
@@ -111,7 +111,7 @@
           </p>
         </li>
         <li>
-          <img src="./images/img (5).jpg" alt="women" width="360" />
+          <img src="./images/photoe.jpg" alt="women" width="360" />
           <h3 class="example-titles">Online Courses</h3>
           <p>Marketing</p>
           <p>
@@ -121,7 +121,7 @@
           </p>
         </li>
         <li>
-          <img src="./images/img (6).jpg" alt="design layouts" width="360" />
+          <img src="./images/photof.jpg" alt="design layouts" width="360" />
           <h3 class="example-titles">Instagram Stories Concept</h3>
           <p>Design</p>
           <p>
@@ -132,7 +132,7 @@
         </li>
         <li>
           <img
-            src="./images/img (7).jpg"
+            src="./images/photoag.jpg"
             alt="a person walks with a bag of food"
             width="360"
           />
@@ -145,7 +145,7 @@
           </p>
         </li>
         <li>
-          <img src="./images/img (8).jpg" alt="making coffee" width="360" />
+          <img src="./images/photol.jpg" alt="making coffee" width="360" />
           <h3 class="example-titles">Fresh Coffee</h3>
           <p>Web Site</p>
           <p>
