--- a/portfolio.html
+++ b/portfolio.html
@@ -19,13 +19,13 @@
       <nav>
         <a href="./index.html" class="logo">WebStudio</a>
         <ul class="site-nav list">
-          <li><a href="" class="link">Studio</a></li>
+          <li><a href="./studio.html" class="link">Studio</a></li>
           <li><a href="./portfolio.html" class="link">Portfolio</a></li>
-          <li><a href="" class="link">Contacts</a></li>
+          <li><a href="./contacts.html" class="link">Contacts</a></li>
         </ul>
       </nav>
-      <address>
-        <ul class="auth-nav">
+      <address class="auth-nav">
+        <ul class="lists">
           <li>
             <a href="mailto:info@devstudio.com" class="link"
               >info@devstudio.com</a
@@ -39,34 +39,24 @@
     </header>
     <main>
       <div>
-        <h1>Gallery</h1>
+        <h1 class="visually-hidden">Gallery</h1>
         <button type="button" class="gallery-link">All</button>
         <button type="button" class="gallery-link">Web Site</button>
         <button type="button" class="gallery-link">App</button>
         <button type="button" class="gallery-link">Design</button>
         <button type="button" class="gallery-link">Marketing</button>
       </div>
-      <h2>Example of works</h2>
+      <h2 class="visually-hidden">Example of works</h2>
       <ul class="example">
         <li>
           <img src="./images/photo.jpg" alt="bank app" width="360" />
           <h3 class="example-titles">Banking App Interface Concept</h3>
           <p>App</p>
-          <p>
-            14 Stylish and User-Friendly App Design Concepts · Task Manager App
-            · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage
-            App
-          </p>
         </li>
         <li>
           <img src="./images/photoa.jpg" alt="blank screen" width="360" />
           <h3 class="example-titles">Cashless Payment</h3>
           <p>Marketing</p>
-          <p>
-            14 Stylish and User-Friendly App Design Concepts · Task Manager App
-            · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage
-            App
-          </p>
         </li>
         <li>
           <img
@@ -76,11 +66,6 @@
           />
           <h3 class="example-titles">Meditaion App</h3>
           <p>App</p>
-          <p>
-            14 Stylish and User-Friendly App Design Concepts · Task Manager App
-            · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage
-            App
-          </p>
         </li>
         <li>
           <img
@@ -90,11 +75,6 @@
           />
           <h3 class="example-titles">Taxi Service</h3>
           <p>Marketing</p>
-          <p>
-            14 Stylish and User-Friendly App Design Concepts · Task Manager App
-            · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage
-            App
-          </p>
         </li>
         <li>
           <img
@@ -104,31 +84,16 @@
           />
           <h3 class="example-titles">Screen Illustrations</h3>
           <p>Design</p>
-          <p>
-            14 Stylish and User-Friendly App Design Concepts · Task Manager App
-            · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage
-            App
-          </p>
         </li>
         <li>
           <img src="./images/photoe.jpg" alt="women" width="360" />
           <h3 class="example-titles">Online Courses</h3>
           <p>Marketing</p>
-          <p>
-            14 Stylish and User-Friendly App Design Concepts · Task Manager App
-            · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage
-            App
-          </p>
         </li>
         <li>
           <img src="./images/photof.jpg" alt="design layouts" width="360" />
           <h3 class="example-titles">Instagram Stories Concept</h3>
           <p>Design</p>
-          <p>
-            14 Stylish and User-Friendly App Design Concepts · Task Manager App
-            · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage
-            App
-          </p>
         </li>
         <li>
           <img
@@ -138,21 +103,11 @@
           />
           <h3 class="example-titles">Organic Food</h3>
           <p>Web Site</p>
-          <p>
-            14 Stylish and User-Friendly App Design Concepts · Task Manager App
-            · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage
-            App
-          </p>
         </li>
         <li>
           <img src="./images/photol.jpg" alt="making coffee" width="360" />
           <h3 class="example-titles">Fresh Coffee</h3>
           <p>Web Site</p>
-          <p>
-            14 Stylish and User-Friendly App Design Concepts · Task Manager App
-            · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage
-            App
-          </p>
         </li>
       </ul>
     </main>
