--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>WebStudio</title>
+
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -19,13 +20,13 @@
       <nav>
         <a href="./index.html" class="logo">WebStudio</a>
         <ul class="site-nav list">
-          <li><a href="" class="link">Studio</a></li>
+          <li><a href="./studio.html" class="link">Studio</a></li>
           <li><a href="./portfolio.html" class="link">Portfolio</a></li>
-          <li><a href="" class="link">Contacts</a></li>
+          <li><a href="./contacts.html" class="link">Contacts</a></li>
         </ul>
       </nav>
-      <address>
-        <ul class="auth-nav">
+      <address class="auth-nav">
+        <ul class="lists">
           <li>
             <a href="mailto:info@devstudio.com" class="link"
               >info@devstudio.com</a
@@ -45,8 +46,8 @@
       </section>
       <!--info-->
       <section class="info">
-        <h2>TEXT</h2>
-        <ul>
+        <h2 class="visually-hidden">TEXT</h2>
+        <ul class="lists">
           <li>
             <h3 class="info-title">Strategy</h3>
             <p>
@@ -81,7 +82,7 @@
       <!--photo-->
       <section class="photo">
         <h2 class="photo-titles">What are we doing</h2>
-        <ul>
+        <ul class="lists">
           <li>
             <img src="./images/1.1.jpg" alt="IMac" width="360" />
           </li>
@@ -101,7 +102,7 @@
       <section class="team">
         <h2 class="team-titles">Our Team</h2>
 
-        <ul>
+        <ul class="lists">
           <li>
             <img src="./images/2.1.jpg" alt="men" width="264" />
             <h3>Mark Guerrero</h3>
