--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
       <nav>
         <a href="./index.html" class="logo">WebStudio</a>
         <ul class="site-nav list">
-          <li><a href="./studio.html" class="link">Studio</a></li>
+          <li><a href="./index.html" class="link">Studio</a></li>
           <li><a href="./portfolio.html" class="link">Portfolio</a></li>
-          <li><a href="./contacts.html" class="link">Contacts</a></li>
+          <li><a href="" class="link">Contacts</a></li>
         </ul>
       </nav>
       <address class="auth-nav">
