--- a/index.html
+++ b/index.html
@@ -18,7 +18,9 @@
     <header>
       <!--logo-->
       <nav>
-        <a href="./index.html" class="logo">WebStudio</a>
+        <a href="./index.html" class="logo"
+          ><span class="colortext">Web</span>Studio</a
+        >
         <ul class="site-nav list">
           <li><a href="./index.html" class="link">Studio</a></li>
           <li><a href="./portfolio.html" class="link">Portfolio</a></li>
@@ -129,7 +131,9 @@
     </main>
     <!--footer-->
     <footer class="down">
-      <a href="./index.html" class="down-logo">WebStudio</a>
+      <a href="./index.html" class="down-logo"
+        ><span class="colortext">Web</span>Studio</a
+      >
       <p>
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
