--- a/portfolio.html
+++ b/portfolio.html
@@ -17,7 +17,9 @@
     <header>
       <!--logo-->
       <nav>
-        <a href="./index.html" class="logo">WebStudio</a>
+        <a href="./index.html" class="logo"
+          ><span class="colortext">Web</span>Studio</a
+        >
         <ul class="site-nav list">
           <li><a href="./index.html" class="link">Studio</a></li>
           <li><a href="./portfolio.html" class="link">Portfolio</a></li>
@@ -38,83 +40,103 @@
       </address>
     </header>
     <main>
-      <div>
+      <section>
         <h1 class="visually-hidden">Gallery</h1>
         <button type="button" class="gallery-link">All</button>
         <button type="button" class="gallery-link">Web Site</button>
         <button type="button" class="gallery-link">App</button>
         <button type="button" class="gallery-link">Design</button>
         <button type="button" class="gallery-link">Marketing</button>
-      </div>
-      <h2 class="visually-hidden">Example of works</h2>
-      <ul class="example">
-        <li>
-          <img src="./images/photo.jpg" alt="bank app" width="360" />
-          <h3 class="example-titles">Banking App Interface Concept</h3>
-          <p>App</p>
-        </li>
-        <li>
-          <img src="./images/photoa.jpg" alt="blank screen" width="360" />
-          <h3 class="example-titles">Cashless Payment</h3>
-          <p>Marketing</p>
-        </li>
-        <li>
-          <img
-            src="./images/photob.jpg"
-            alt="computer and smartfon"
-            width="360"
-          />
-          <h3 class="example-titles">Meditaion App</h3>
-          <p>App</p>
-        </li>
-        <li>
-          <img
-            src="./images/photoc.jpg"
-            alt="the man behind the wheel"
-            width="360"
-          />
-          <h3 class="example-titles">Taxi Service</h3>
-          <p>Marketing</p>
-        </li>
-        <li>
-          <img
-            src="./images/photod.jpg"
-            alt="screensaver for the phone"
-            width="360"
-          />
-          <h3 class="example-titles">Screen Illustrations</h3>
-          <p>Design</p>
-        </li>
-        <li>
-          <img src="./images/photoe.jpg" alt="women" width="360" />
-          <h3 class="example-titles">Online Courses</h3>
-          <p>Marketing</p>
-        </li>
-        <li>
-          <img src="./images/photof.jpg" alt="design layouts" width="360" />
-          <h3 class="example-titles">Instagram Stories Concept</h3>
-          <p>Design</p>
-        </li>
-        <li>
-          <img
-            src="./images/photoag.jpg"
-            alt="a person walks with a bag of food"
-            width="360"
-          />
-          <h3 class="example-titles">Organic Food</h3>
-          <p>Web Site</p>
-        </li>
-        <li>
-          <img src="./images/photol.jpg" alt="making coffee" width="360" />
-          <h3 class="example-titles">Fresh Coffee</h3>
-          <p>Web Site</p>
-        </li>
-      </ul>
+        <h2 class="visually-hidden">Example of works</h2>
+        <ul class="example">
+          <li>
+            <a href="">
+              <img src="./images/photo.jpg" alt="bank app" width="360" />
+              <h3 class="example-titles">Banking App Interface Concept</h3>
+              <p>App</p></a
+            >
+          </li>
+          <li>
+            <a href="">
+              <img src="./images/photoa.jpg" alt="blank screen" width="360" />
+              <h3 class="example-titles">Cashless Payment</h3>
+              <p>Marketing</p></a
+            >
+          </li>
+          <li>
+            <a href="">
+              <img
+                src="./images/photob.jpg"
+                alt="computer and smartfon"
+                width="360"
+              />
+              <h3 class="example-titles">Meditaion App</h3>
+              <p>App</p></a
+            >
+          </li>
+          <li>
+            <a href="">
+              <img
+                src="./images/photoc.jpg"
+                alt="the man behind the wheel"
+                width="360"
+              />
+              <h3 class="example-titles">Taxi Service</h3>
+              <p>Marketing</p></a
+            >
+          </li>
+          <li>
+            <a href="">
+              <img
+                src="./images/photod.jpg"
+                alt="screensaver for the phone"
+                width="360"
+              />
+              <h3 class="example-titles">Screen Illustrations</h3>
+              <p>Design</p></a
+            >
+          </li>
+          <li>
+            <a href="">
+              <img src="./images/photoe.jpg" alt="women" width="360" />
+              <h3 class="example-titles">Online Courses</h3>
+              <p>Marketing</p></a
+            >
+          </li>
+          <li>
+            <a href="">
+              <img src="./images/photof.jpg" alt="design layouts" width="360" />
+              <h3 class="example-titles">Instagram Stories Concept</h3>
+              <p>Design</p></a
+            >
+          </li>
+          <li>
+            <a href="">
+              <img
+                src="./images/photoag.jpg"
+                alt="a person walks with a bag of food"
+                width="360"
+              />
+              <h3 class="example-titles">Organic Food</h3>
+              <p>Web Site</p></a
+            >
+          </li>
+          <li>
+            <a href="">
+              <img src="./images/photol.jpg" alt="making coffee" width="360" />
+              <h3 class="example-titles">Fresh Coffee</h3>
+              <p>Web Site</p></a
+            >
+          </li>
+        </ul>
+      </section>
     </main>
 
     <!--footer-->
     <footer class="down">
-      <a href="./index.html" class="down-logo">WebStudio</a>
+      <a href="./index.html" class="down-logo"
+        ><span class="colortext">Web</span>Studio</a
+      >
       <p>
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
