--- a/portfolio.html
+++ b/portfolio.html
@@ -42,11 +42,13 @@
     <main>
       <section>
         <h1 class="visually-hidden">Gallery</h1>
-        <button type="button" class="gallery-link">All</button>
-        <button type="button" class="gallery-link">Web Site</button>
-        <button type="button" class="gallery-link">App</button>
-        <button type="button" class="gallery-link">Design</button>
-        <button type="button" class="gallery-link">Marketing</button>
+        <ul class="filter-link">
+          <li><button type="button" class="gallery-link">All</button></li>
+          <li><button type="button" class="gallery-link">Web Site</button></li>
+          <li><button type="button" class="gallery-link">App</button></li>
+          <li><button type="button" class="gallery-link">Design</button></li>
+          <li><button type="button" class="gallery-link">Marketing</button></li>
+        </ul>
         <h2 class="visually-hidden">Example of works</h2>
         <ul class="example">
           <li>
